syntax = "proto3";
package refractedlabs.oracle.v1;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/refractedlabs/oracle/x/oracle/types/v1";

message MissCounter {
  string validator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  int64 counter = 2;
}
